# turtles

./: .gitignore  README.md  pyproject.toml  smallest_ergo.py  test_gll_demo.py  test_hydration.py  test_np_pratt.py  test_parsing.py  test_turtles.py
gll/: easygrammar.py  examples.py  frontend.py  gll.py  trees.py
scratch/gll/: easygrammar.py  examples.py
tests/: demo_error_messages.py  examples.py  test_ambiguities.py  test_as_dict.py  test_csv.py  test_hydration.py  test_json_import.py  test_parsing.py
turtles/: __init__.py  dsl.py  dsl.pyi  easygrammar.py  gll.py  grammar.py
turtles/backend/: gll.py
turtles/examples/: csv.py  email.py  html.py  ip.py  isodate.py  json.py  json_toy.py  phone.py  semver.py  toy_json.py  uri.py  uuid.py  xml.py
