[project]
name = "turtles"
version = "2.0.0rc1"
description = "Pythonic parser tools"
readme = "README.md"
authors = [{ name = "David Samson", email = "david.andrew.engineer@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "prettyerr>=0.0.3",
]

[project.urls]
"repository" = "https://github.com/david-andrew/turtles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turtles"]

[project.optional-dependencies]
lark = [
    "lark>=1.3.1",
]
all = [
    "lark>=1.3.1",
]
